--- a/homework/Day_002_HW.ipynb
+++ b/homework/Day_002_HW.ipynb
@@ -25,11 +25,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "ANS:機器學習技術應用於醫療保健領域具有巨大的潛力。他們在這個方面也做出許多工作，包括協助病理學家來檢測癌症、理解醫療對話以協助醫生和病人互動 ，以及利用機器學習解決基因組學中的各種問題。"
+   ]
   }
  ],
  "metadata": {
