--- a/homework/Day_003_HW.ipynb
+++ b/homework/Day_003_HW.ipynb
@@ -53,11 +53,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "https://machinelearning.apple.com/2018/04/16/personalized-hey-siri.html\n",
+    "\n",
+    "1.專案的目標？ (要解決什麼問題）\n",
+    "用聲音就能叫seri，不需要按home鍵\n",
+    "\n",
+    "2.使用的技術是？ (只需知道名稱即可，例如：使用 CNN 卷積神經網路做影像分類)\n",
+    "DNN(深度神經網路)做語音識別\n",
+    "\n",
+    "3.資料來源？\n",
+    "使用線性判別分析（LDA）對來自800個用戶的數據進行了線性判別分析（LDA）訓練，每個用戶的發音超過100種，並產生了150維的說話人矢量。\n"
+   ]
   }
  ],
  "metadata": {
