--- a/homework/Day_011_HW.ipynb
+++ b/homework/Day_011_HW.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "[101 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "Name: AMT_ANNUITY_NORMALIZED, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,34 +511,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Before replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: 278\n",
-      "450000.0    26022\n",
-      "225000.0    25282\n",
-      "675000.0    24962\n",
-      "900000.0    15416\n",
-      "270000.0    11428\n",
-      "Name: AMT_GOODS_PRICE, dtype: int64\n",
-      "After replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: 0\n"
+      "Before replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: 278\n"
      ]
     }
    ],
    "source": [
     "# 3\n",
-    "print(\"Before replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: %i\" % sum(app_train['AMT_GOODS_PRICE'].isnull()))\n",
-    "\n",
-    "# 列出重複最多的數值\n",
+    "print(\"Before replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: %i\" % sum(app_train['AMT_GOODS_PRICE'].isnull()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "450000.0    26022\n",
+      "225000.0    25282\n",
+      "675000.0    24962\n",
+      "900000.0    15416\n",
+      "270000.0    11428\n",
+      "Name: AMT_GOODS_PRICE, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
     "print(app_train['AMT_GOODS_PRICE'].value_counts().head())\n",
     "\n",
-    "mode_goods_price = list(app_train['AMT_GOODS_PRICE'].value_counts().index)\n",
-    "app_train.loc[app_train['AMT_GOODS_PRICE'].isnull(), 'AMT_GOODS_PRICE'] = mode_goods_price[0]\n",
+    "#印出application_train.csv的『AMT_GOODS_PRICE』cloumn前五個「值」和「個數」，由大到小排列"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26022"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_train[app_train['AMT_GOODS_PRICE'] == 450000.0]['AMT_GOODS_PRICE'].count()\n",
     "\n",
+    "#計算application_train.csv的『AMT_GOODS_PRICE』cloumn等於450000.0的個數，共有26022個"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mode_goods_price = list(app_train['AMT_GOODS_PRICE'].value_counts().index)\n",
+    "app_train.loc[app_train['AMT_GOODS_PRICE'].isnull()] = mode_goods_price[0]\n",
+    "\n",
+    "#把『mode_goods_price』這個list的第一個index(45000.0)捕到N/A上，其中null共有278個"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26300"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "app_train[app_train['AMT_GOODS_PRICE'] == 450000.0]['AMT_GOODS_PRICE'].count()\n",
+    "\n",
+    "#最後application_train.csv的『AMT_GOODS_PRICE』cloumn等於450000.0的個數變成26022+278=26300個"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "After replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: 0\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"After replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: %i\" % sum(app_train['AMT_GOODS_PRICE'].isnull()))"
    ]
   }
