--- a/homework/Day_017_HW.ipynb
+++ b/homework/Day_017_HW.ipynb
@@ -173,6 +173,184 @@
     "# 觀察劃分下, 每個種組距各出現幾次\n",
     "ages[\"customized_age_grp\"].value_counts() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>equal_width_age</th>\n",
+       "      <th>equal_freq_age</th>\n",
+       "      <th>customized_age_grp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>18</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(6.999, 20.25]</td>\n",
+       "      <td>(10, 20]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(20.25, 26.0]</td>\n",
+       "      <td>(20, 30]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>25</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(20.25, 26.0]</td>\n",
+       "      <td>(20, 30]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(26.0, 42.0]</td>\n",
+       "      <td>(20, 30]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(6.999, 20.25]</td>\n",
+       "      <td>(0, 10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(20.25, 26.0]</td>\n",
+       "      <td>(20, 30]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>23</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(20.25, 26.0]</td>\n",
+       "      <td>(20, 30]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>37</td>\n",
+       "      <td>(30.25, 53.5]</td>\n",
+       "      <td>(26.0, 42.0]</td>\n",
+       "      <td>(30, 50]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>30</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(26.0, 42.0]</td>\n",
+       "      <td>(20, 30]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>61</td>\n",
+       "      <td>(53.5, 76.75]</td>\n",
+       "      <td>(42.0, 100.0]</td>\n",
+       "      <td>(50, 100]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>45</td>\n",
+       "      <td>(30.25, 53.5]</td>\n",
+       "      <td>(42.0, 100.0]</td>\n",
+       "      <td>(30, 50]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>41</td>\n",
+       "      <td>(30.25, 53.5]</td>\n",
+       "      <td>(26.0, 42.0]</td>\n",
+       "      <td>(30, 50]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>9</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(6.999, 20.25]</td>\n",
+       "      <td>(0, 10]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>(6.907, 30.25]</td>\n",
+       "      <td>(6.999, 20.25]</td>\n",
+       "      <td>(10, 20]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>80</td>\n",
+       "      <td>(76.75, 100.0]</td>\n",
+       "      <td>(42.0, 100.0]</td>\n",
+       "      <td>(50, 100]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>100</td>\n",
+       "      <td>(76.75, 100.0]</td>\n",
+       "      <td>(42.0, 100.0]</td>\n",
+       "      <td>(50, 100]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age equal_width_age  equal_freq_age customized_age_grp\n",
+       "0    18  (6.907, 30.25]  (6.999, 20.25]           (10, 20]\n",
+       "1    22  (6.907, 30.25]   (20.25, 26.0]           (20, 30]\n",
+       "2    25  (6.907, 30.25]   (20.25, 26.0]           (20, 30]\n",
+       "3    27  (6.907, 30.25]    (26.0, 42.0]           (20, 30]\n",
+       "4     7  (6.907, 30.25]  (6.999, 20.25]            (0, 10]\n",
+       "5    21  (6.907, 30.25]   (20.25, 26.0]           (20, 30]\n",
+       "6    23  (6.907, 30.25]   (20.25, 26.0]           (20, 30]\n",
+       "7    37   (30.25, 53.5]    (26.0, 42.0]           (30, 50]\n",
+       "8    30  (6.907, 30.25]    (26.0, 42.0]           (20, 30]\n",
+       "9    61   (53.5, 76.75]   (42.0, 100.0]          (50, 100]\n",
+       "10   45   (30.25, 53.5]   (42.0, 100.0]           (30, 50]\n",
+       "11   41   (30.25, 53.5]    (26.0, 42.0]           (30, 50]\n",
+       "12    9  (6.907, 30.25]  (6.999, 20.25]            (0, 10]\n",
+       "13   18  (6.907, 30.25]  (6.999, 20.25]           (10, 20]\n",
+       "14   80  (76.75, 100.0]   (42.0, 100.0]          (50, 100]\n",
+       "15  100  (76.75, 100.0]   (42.0, 100.0]          (50, 100]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ages"
+   ]
   }
  ],
  "metadata": {
