--- a/homework/Day_046_HW.ipynb
+++ b/homework/Day_046_HW.ipynb
@@ -15,8 +15,7 @@
    "outputs": [],
    "source": [
     "from sklearn import datasets, metrics\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -26,66 +25,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn import datasets, metrics\n",
-    "digits = datasets.load_digits()"
+    "# 讀取手寫辨識資料集\n",
+    "digits = datasets.load_digits()\n",
+    "\n",
+    "# 切分訓練集/測試集\n",
+    "x_train, x_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.25, random_state=4)\n",
+    "\n",
+    "# 建立模型\n",
+    "clf = GradientBoostingClassifier()\n",
+    "\n",
+    "# 訓練模型\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# 預測結果\n",
+    "y_pred = clf.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 讀取鳶尾花資料集\n",
-    "iris = datasets.load_digits()\n",
-    "\n",
-    "# 切分訓練集/測試集\n",
-    "x_train, x_test, y_train, y_test = train_test_split(digits.data, digits.target, test_size=0.25, random_state=4)\n",
-    "\n",
-    "# 建立模型\n",
-    "clf = GradientBoostingRegressor()\n",
-    "\n",
-    "# 訓練模型\n",
-    "clf.fit(x_train, y_train)\n",
-    "\n",
-    "# 預測測試集\n",
-    "y_pred = clf.predict(x_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean squared error: 1.55\n"
+      "Acuuracy:  0.9688888888888889\n"
      ]
     }
    ],
    "source": [
-    "print(\"Mean squared error: %.2f\"\n",
-    "      % mean_squared_error(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r2 score:  0.8166528772725342\n"
-     ]
-    }
-   ],
-   "source": [
-    "r2 = r2_score(y_test, y_pred)\n",
-    "print(\"r2 score: \", r2)"
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Acuuracy: \", acc)"
    ]
   }
  ],
